Keep self updater compatible with Android 8+